[project]
name = "adaptive-rank-for-lora"
version = "0.1.0"
description = "Adaptive Rank for LoRA - Final project of optimization for AI 2025-2"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "datasets>=2.0.0",
    "evaluate>=0.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "tiktoken>=0.5.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.1.0",
    "scipy>=1.0.0",
    "scikit-learn>=1.0.0",
    "absl-py>=2.3.1",
    "nltk>=3.9.1",
    "rouge-score>=0.1.2",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "seaborn>=0.13.2",
]

